5.0/it/22-encore.rst
Impostare lo stile dell'interfaccia utente con Webpack
======================================================

.. index::
    single: Encore
    single: Webpack
    single: Components;Encore
    single: Stylesheet

Non abbiamo speso tempo nella progettazione dell'interfaccia utente. Per impostare uno stile professionale, utilizzeremo uno stack moderno basato su Webpack <https://webpack.js.org/>`_, e per aggiungere un tocco di Symfony e facilitare la sua integrazione con l'applicazione, installiamo *Webpack Encore*:

.. code-block:: bash

    $ symfony composer req encore

Un ambiente Webpack completo è stato creato per noi: ``package.json`` e ``webpack.config.js`` sono stati generati e contengono una buona configurazione predefinita. Aprendo ``webpack.config.js``, potremo notare l'utilizzo dell'astrazione Encore usata per configurare Webpack.

Il file ``package.json`` definisce alcuni comandi che useremo sempre.

La cartella ``assets``contiene i principali punti di ingresso per le risorse del progetto: ``styles/app.css`` e ``app.js``.

Utilizzo di Sass
----------------

.. index::
    single: Sass

Invece di usare i normali CSS, passiamo a `Sass <https://sass-lang.com/>`_:

.. code-block:: bash

    $ mv assets/styles/app.css assets/styles/app.scss

.. code-block:: diff
    :caption: patch_file

    --- a/assets/app.js
    +++ b/assets/app.js
    @@ -6,7 +6,7 @@
      */

     // any CSS you import will output into a single css file (app.css in this case)
    -import './styles/app.css';
    +import './styles/app.scss';

     // Need jQuery? Install it with "yarn add jquery", then uncomment to import it.
     // import $ from 'jquery';

Installare sass-loader:

.. code-block:: bash

    $ yarn add node-sass sass-loader --dev

E abilitare il Sass loader in webpack:

.. code-block:: diff
    :caption: patch_file

    --- a/webpack.config.js
    +++ b/webpack.config.js
    @@ -54,7 +54,7 @@ Encore
         })

         // enables Sass/SCSS support
    -    //.enableSassLoader()
    +    .enableSassLoader()

         // uncomment if you use TypeScript
         //.enableTypeScriptLoader()

Come facevo a sapere quali pacchetti installare? Se si tenta un build senza pacchetti, Encore mostra un messaggio di errore e suggerisce il comando ``yarn add`` per installare le dipendenze (necessarie per caricare i file ``.scss``).

Sfruttare Bootstrap
-------------------

.. index::
    single: Bootstrap

Per iniziare con buone impostazioni predefinite e costruire un sito responsive, un framework CSS come `Bootstrap <https://getbootstrap.com/>`_ può aiutarci molto. Installiamolo come pacchetto:

.. code-block:: bash

    $ yarn add bootstrap jquery popper.js bs-custom-file-input --dev

Richiediamo Bootstrap nel file CSS (abbiamo anche ripulito il file):

.. code-block:: diff
    :caption: patch_file

    --- a/assets/styles/app.scss
    +++ b/assets/styles/app.scss
    @@ -1,3 +1 @@
    -body {
    -    background-color: lightgray;
    -}
    +@import '~bootstrap/scss/bootstrap';

Facciamo lo stesso per il file JS:

.. code-block:: diff
    :caption: patch_file

    --- a/assets/app.js
    +++ b/assets/app.js
    @@ -7,8 +7,7 @@

     // any CSS you import will output into a single css file (app.css in this case)
     import './styles/app.scss';
    +import 'bootstrap';
    +import bsCustomFileInput from 'bs-custom-file-input';

    -// Need jQuery? Install it with "yarn add jquery", then uncomment to import it.
    -// import $ from 'jquery';
    -
    -console.log('Hello Webpack Encore! Edit me in assets/app.js');
    +bsCustomFileInput.init();

Il sistema dei form di Symfony supporta Bootstrap nativamente con un tema speciale, abilitiamolo:

.. code-block:: yaml
    :caption: config/packages/twig.yaml

    twig:
        form_themes: ['bootstrap_4_layout.html.twig']

Impostare lo stile dell'HTML
----------------------------

Ora siamo pronti per impostare lo stile dell'applicazione. Scarichiamo ed estraiamo l'archivio nella cartella principale del progetto:

.. code-block:: bash

    $ php -r "copy('https://symfony.com/uploads/assets/guestbook-5.0.zip', 'guestbook-5.0.zip');"
    $ unzip -o guestbook-5.0.zip
    $ rm guestbook-5.0.zip

Dando un'occhiata ai template, potreste imparare un paio di trucchi su Twig.

Build degli asset
-----------------

.. index::
    single: Symfony CLI;run

Un cambiamento importante quando si usa Webpack è che i file CSS e JS non sono utilizzabili direttamente dall'applicazione. Devono essere prima "compilati".

Durante lo sviluppo, gli asset possono essere compilati tramite il comando ``encore dev``:

.. code-block:: bash

    $ symfony run yarn encore dev

Invece di eseguire il comando ogni volta che c'è una modifica, metterlo in background e lasciare che intercetti le modifiche dei file JS e CSS:

.. code-block:: bash
    :class: ignore

    $ symfony run -d yarn encore dev --watch

Prendetevi il tempo per scoprire i cambiamenti visivi. Date un'occhiata al nuovo design in un browser.

.. figure:: screenshots/design-homepage.png
    :alt: /
    :align: center
    :figclass: with-browser

.. figure:: screenshots/design-conference.png
    :alt: /conference/amsterdam-2019
    :align: center
    :figclass: with-browser

Il form di login generato ha ora uno stile, perché MakerBundle usa di default le classi CSS di Bootstrap:

.. figure:: screenshots/login-styled.png
    :alt: /login
    :align: center
    :figclass: with-browser

In produzione, SymfonyCloud rileva automaticamente che si sta usando Encore e compila gli asset per noi durante la fase di build.

.. sidebar:: Andare oltre

    * `Documentazione di Webpack <https://webpack.js.org/concepts/>`_;

    * `Documentazione di Webpack Encore <https://symfony.com/doc/current/frontend.html>`_;

    * `Guida a Webpack Encore su SymfonyCasts <https://symfonycasts.com/screencast/webpack-encore>`_.
